--- a/ZebraODQA/pyproject.toml
+++ b/ZebraODQA/pyproject.toml
@@ -16,6 +16,7 @@ confuse = "^1.4.0"
 alive-progress = "^1.6.2"
 datasets = "^1.6.2"
 torch = "^1.8.1"
+faiss-cpu = "^1.7.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.3"
