--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3",
+    "python.pythonPath": "/opt/miniconda3/envs/starostka/bin/python",
     "python.formatting.provider": "black"
 }
